--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,9 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  align-items: center;
+  justify-content: center;
+  margin:2em;
+  background-color: #c2c9d8;
 }
 
 .App-header {
@@ -28,11 +21,46 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-lat-long-container {
+  display: flex;
+  flex-direction: 'column';
+  align-items: center;
+  justify-content: center;
+  gap: 4vb;
+  margin-bottom: 12vb;
+  background-color: #dae3f7;
+  padding: 2vb;
+}
+
+.App-lat-long {
+  display: flex;
+  flex-direction: 'row';
+  gap: 4vb;
+}
+
+.App-text-label {
+  font-weight: 600;
+}
+
+.App-input-text {
+  border-color: rgb(55, 55, 237);
+  border-width: 1px;
+}
+
+.Submit-button {
+  width: max-content;
+  padding: 1em;
+  background-color: cornflowerblue;
+  border-radius: 4px;
+  border-color: cornflowerblue;
+  color: #ffffff;
+}
+#map {
+  height: 100%;
+}
+.Spinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
